src/styles/style.css
/* ... */
.text-white-50 {
  color: rgba(255, 255, 255, 0.5) !important;
}

.text-hide {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.text-decoration-none {
  text-decoration: none !important;
}

.text-reset {
  color: inherit !important;
}

.visible {
  visibility: visible !important;
}

.invisible {
  visibility: hidden !important;
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
  }
  a:not(.btn) {
    text-decoration: underline;
  }
  abbr[title]::after {
    content: " (" attr(title) ")";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #adb5bd;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  @page {
    size: a3;
  }
  body {
    min-width: 992px !important;
  }
  .container {
    min-width: 992px !important;
  }
  .navbar {
    display: none;
  }
  .badge {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #dee2e6 !important;
  }
  .table-dark {
    color: inherit;
  }
  .table-dark th,
  .table-dark td,
  .table-dark thead th,
  .table-dark tbody + tbody {
    border-color: #dee2e6;
  }
  .table .thead-dark th {
    color: inherit;
    border-color: #dee2e6;
  }
}

body {
  font-family: "Poppins", Arial, sans-serif;
  background: #fff;
  font-size: 16px;
  line-height: 1.8;
  font-weight: 400;
  color: gray;
}
body.menu-show {
  overflow: hidden;
  position: fixed;
  height: 100%;
  width: 100%;
}

a {
  -webkit-transition: 0.3s all ease;
  -o-transition: 0.3s all ease;
  transition: 0.3s all ease;
  color: #115d32;
}
a:hover,
a:focus {
  text-decoration: none;
  color: #115d32;
  outline: none !important;
}

h1,
h2,
h3,
h4,
h5,
.h1,
.h2,
.h3,
.h4,
.h5 {
  line-height: 1.5;
  color: rgba(0, 0, 0, 0.8);
  font-weight: 400;
}

.ftco-navbar-light {
  background: #252525;
  background: #ffffff !important;
  z-index: 3;
  padding: 0;
}
@media (max-width: 991.98px) {
  .ftco-navbar-light {
    background: #ffffff !important;
    position: relative;
    top: 0;
    padding: 10px 15px;
  }
}
@media (max-width: 991.98px) {
  .ftco-navbar-light .navbar-nav {
    padding-bottom: 10px;
  }
}
.ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
  font-size: 14px;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  padding-left: 20px;
  padding-right: 20px;
  font-weight: 600;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: 2px;
  position: relative;
  opacity: 1 !important;
}
.ftco-navbar-light .navbar-nav > .nav-item > .nav-link:before {
  position: absolute;
  bottom: 0;
  left: 0;
  content: "";
  display: block;
  width: 0;
  height: 2px;
  background: #115d32;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
.ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
  color: #115d32;
}
.ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover:before {
  width: 100%;
}
@media (max-width: 991.98px) {
  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
    padding-left: 0;
    padding-right: 0;
    padding-top: 0.7rem;
    padding-bottom: 0.7rem;
    color: rgba(255, 255, 255, 0.7);
  }
  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
    color: #fff;
  }
}
@media (max-width: 767.98px) {
  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  }
}
.ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
  border: none;
  background: #fff;
  -webkit-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
  -moz-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
  box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
  border-radius: 4px;
}
.ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item {
  font-size: 12px;
  color: #000000;
}
.ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:hover,
.ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:focus {
  background: #115d32;
  color: #fff;
}
@media (max-width: 991.98px) {
  .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
    display: block !important;
    background: #000000;
  }
  .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item {
    color: rgba(255, 255, 255, 0.8);
  }
}
.ftco-navbar-light .navbar-nav > .nav-item.cta > a {
  color: #fff;
  background: #115d32;
  border-radius: 0px;
}
@media (max-width: 767.98px) {
  .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
    padding-left: 15px;
    padding-right: 15px;
  }
}
@media (max-width: 991.98px) {
  .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
    color: #fff;
    background: #115d32;
    border-radius: 4px;
  }
}
.ftco-navbar-light .navbar-nav > .nav-item.active > a {
  color: #115d32;
}
@media (max-width: 991.98px) {
  .ftco-navbar-light .navbar-nav > .nav-item.active > a {
    color: #115d32;
  }
}
.ftco-navbar-light .navbar-toggler {
  border: none;
  box-shadow: none;
  color: rgba(255, 255, 255, 0.5) !important;
  cursor: pointer;
  padding-right: 0;
  text-transform: uppercase;
  font-size: 16px;
  letter-spacing: 0.1em;
}
.ftco-navbar-light .navbar-toggler:focus {
  outline: none !important;
  box-shadow: none !important;
}

.navbar-brand {
  color: #000000;
  font-weight: 900;
  font-size: 32px;
  line-height: 1;
}
.navbar-brand span {
  color: #115d32;
}
.navbar-brand:hover,
.navbar-brand:focus {
  color: #000000;
}

.social-media {
  display: inline-block;
}
/* ... */

